PopulateRDFCache: FIX DOAP URI; remove schema.rdfs.org site; call gc() after each vocab'